<resources>
    <string name="app_name">Fix It</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="log_in">Log In</string>

    <string name="forgot_password">Forgot Password?</string>

    <string name="sign_up">Sign Up</string>
</resources>
